--- a/pop/templates/index.html
+++ b/pop/templates/index.html
@@ -43,7 +43,7 @@
             <dl class="layui-nav-child">
 {#                <dd><a onclick="x_admin_show('个人信息','http://www.baidu.com')">个人信息</a></dd>#}
 {#                <dd><a onclick="x_admin_show('切换帐号','http://www.baidu.com')">切换帐号</a></dd>#}
-                <dd><a href="{% url 'login' %}">退出</a></dd>
+                <dd><a href="{% url 'logout' %}">退出</a></dd>
             </dl>
         </li>
         <li class="layui-nav-item to-index"><a href="/">前台首页</a></li>
