--- a/pop/templates/channel-promotion.html
+++ b/pop/templates/channel-promotion.html
@@ -30,7 +30,7 @@
 
         .mui-content {
             margin: 0 auto;
-            padding-top: 72%;
+            padding-top: 76%;
             width: 80%;
 
         }
@@ -57,9 +57,9 @@
                     <a class="szyz" id="code" onclick="sendVerificationCode()">获取验证码</a>
                 </span>
             </div>
-            <div class="mui-input-row ">
-                <input type="password" class="mui-input-password" placeholder="密码" name="password" lay-verify="required">
-			</div>
+{#            <div class="mui-input-row ">#}
+{#                <input type="password" class="mui-input-password" placeholder="密码" name="password" lay-verify="required">#}
+{#			</div>#}
         </div>
         <a class="log-btn" href="" lay-filter="add" lay-submit="">注册</a>
         <div class="protocol">
@@ -144,11 +144,11 @@
 
     function jump() {
         if (browser.versions.iPhone || browser.versions.iPad || browser.versions.ios) {//苹果版
-            window.location.href = "https://itunes.apple.com/us/app/bei-jing-xin-xi-wang-huo-dong/id1097486612?mt=8";
-            is_weixn();//苹果微信不自动跳转浏览器
+            window.location.href = "https://fir.im/jsnb?release_id=5bc6db4dca87a866ec537872";
+{#            is_weixn();//苹果微信不自动跳转浏览器#}
         }
         if (browser.versions.android) {//安卓
-            window.location.href = 'https://imtt.dd.qq.com/16891/1441780CB865AD65AEDB2DD07251B2E6.apk?fsname=com.hzgxr.yjm_4.0_40.apk&csr=1bbd';
+            window.location.href = 'https://imtt.dd.qq.com/16891/9E561D90FCAA2E3C0FC17B9CBB666767.apk?fsname=com.hzgxr.yjm_5.0_50.apk&csr=1bbd';
         }
     }
 
